# robotics_software_engineer

module_1_assignment/: CMakeLists.txt  Readme.md
module_2_assignment/: CMakeLists.txt  Readme.md
module_2_assignment/install/: local_setup.sh  setup.sh
module_2_assignment/install/module_2_assignment/lib/module_2_assignment/: follow_circle  logarithmic_spiral  rotate  spawn_five_turtle  speed_turtle
module_2_assignment/install/module_2_assignment/share/module_2_assignment/: local_setup.sh  package.bash  package.sh  package.zsh
module_2_assignment/install/module_2_assignment/share/module_2_assignment/launch/: diagonal_speed.launch.py  spawn_diagonal.launch.py
module_2_assignment/launch/: follow_circle.launch.py  logarithmic_spiral.launch.py
module_2_assignment/log/: latest_build
module_2_assignment/src/: follow_circle.cpp  logarithmic_spiral.cpp  spawn_five_turtle.cpp  speed_turtle.cpp
module_2_assignment/src/drive_mobile_robot_as2/: CMakeLists.txt  package.xml
module_2_assignment/src/drive_mobile_robot_as2/install/: local_setup.sh  setup.sh  setup.zsh
module_2_assignment/src/drive_mobile_robot_as2/install/drive_mobile_robot_as2/lib/drive_mobile_robot_as2/: follow_circle  logarithmic_spiral
module_2_assignment/src/drive_mobile_robot_as2/install/drive_mobile_robot_as2/share/drive_mobile_robot_as2/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.zsh
module_2_assignment/src/drive_mobile_robot_as2/launch/: diagonal_speed.launch.py  spawn_diagonal.launch.py
module_2_assignment/src/drive_mobile_robot_as2/log/: latest_build
module_2_assignment/src/drive_mobile_robot_as2/src/: rotate.cpp
module_2_assignment/src/drive_mobile_robot_as2/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
module_2_assignment/src/drive_mobile_robot_as2/src/log/: latest_build
module_2_assignment/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
module_2_assignment/src/install/drive_mobile_robot_as2/lib/drive_mobile_robot_as2/: follow_circle  rotate  spawn_five_turtle  speed_turtle
module_2_assignment/src/install/drive_mobile_robot_as2/share/drive_mobile_robot_as2/: package.bash  package.sh
module_2_assignment/src/log/: latest_build
module_3_assignment/: CMakeLists.txt  Readme.md
module_4_assignment/: CMakeLists.txt  Readme.md
module_4_assignment/launch/: line_following_launch.py  square_line_following.launch.py
module_4_assignment/models/line_track/: model.sdf
module_4_assignment/models/square_maze/: model.config  model.sdf
module_4_assignment/src/: line_following_robot.cpp  square_maze_solving_robot.cpp
module_4_assignment/worlds/: line_following.world  square_maze.world
module_4_assignment/worlds/maze_square.world/: model.config  model.sdf
(+26 files in other folders)
